# Winston

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  claude.md  pyproject.toml  start.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: ADDING_STT_PROVIDERS.md  ADDING_TOOLS.md  ARCHITECTURE.md  CONTRIBUTING.md
jarvis/: config.py  main.py  requirements.txt
jarvis/brain/: agent_executor.py  claude_client.py  memory.py  proactive.py
jarvis/dashboard/: __init__.py
jarvis/perception/: audio.py
jarvis/utils/: __init__.py  cost_tracker.py  echo_cancel.py
tests/: conftest.py  test_audio_pipeline.py  test_dashboard_state.py  test_echo_cancel.py  test_music_filter.py  test_persistent_store.py
winston/: .env.example  config.py  main.py  personality.py  pyproject.toml  requirements.txt  telegram_bot.py  test_claude.py
winston/brain/: __init__.py  agent_executor.py  agent_tools.py  claude_client.py  computer_use.py  curiosity.py  memory.py  proactive.py  research_agent.py  temporal_memory.py  visual_cortex.py
winston/dashboard/: server.py  state.py
winston/dashboard/static/: index.html
winston/perception/: __init__.py  audio.py  camera.py  clip_recorder.py  stt.py  tts.py
winston/personalities/: default.yaml  mentor.yaml  minimal.yaml
winston/tests/: conftest.py  test_cost_tracker.py  test_curiosity.py  test_intent_local.py  test_memory.py  test_persistent_store.py  test_routing.py  test_stt.py  test_telegram_bot.py  test_tool_security.py  test_tools.py
winston/utils/: __init__.py  cost_tracker.py  echo_cancel.py  frame_diff.py  latency_tracker.py  persistent_store.py
